--- a/app/manifest.json
+++ b/app/manifest.json
@@ -1,6 +1,6 @@
 {
 	"name": "__MSG_appName__",
-	"version": "3.6.1",
+	"version": "3.7.6",
 	"manifest_version": 2,
 	"description": "__MSG_appDesc__",
 	"icons": {
@@ -14,12 +14,18 @@
 		"activeTab",
 		"storage"
 	],
+	"browser_specific_settings": {
+		"gecko": {
+			"id": "{e1adb0ad-dcd7-459c-99c9-dc89a8b59002}",
+			"strict_min_version": "57.0"
+		}
+	},	  
 	"browser_action": {
 		"default_icon": {
 		"19": "images/icon-19.png",
 		"38": "images/icon-38.png"
 		},
-		"default_title": "YouTube Auto Like",
+		"default_title": "YouTube Auto DisLike",
 		"default_popup": "options.html"
 	},
 	"content_scripts": [
